Combine fusion and probing capabilities

--- a/notebooks/SemanticChunking_and_RAGFusion_v1.ipynb
+++ b/notebooks/SemanticChunking_and_RAGFusion_v1.ipynb
@@ -1,21 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "6Ui17RdZF-Jd"
+      },
+      "outputs": [],
       "source": [
         "%%capture\n",
         "!pip install langchain\n",
@@ -31,15 +22,15 @@
         "!pip install PyPDF2\n",
         "!pip install pypdf\n",
         "!pip install -U langchain-qdrant"
-      ],
-      "metadata": {
-        "id": "6Ui17RdZF-Jd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "ZEelWy8VH1l3"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "os.environ[\"TOGETHER_API_KEY\"] = \"148521c4088ad416dced465cc144671626b00c860af4e6ebc855953567087d8a\"\n",
@@ -47,15 +38,15 @@
         "\n",
         "TOP_K = 5\n",
         "MAX_DOCS_FOR_CONTEXT = 5"
-      ],
-      "metadata": {
-        "id": "ZEelWy8VH1l3"
-      },
-      "execution_count": 32,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "xnd9ZYqnc2MB"
+      },
+      "outputs": [],
       "source": [
         "from operator import itemgetter\n",
         "from langchain.vectorstores import Qdrant\n",
@@ -78,27 +69,27 @@
         "from langchain.embeddings.cohere import CohereEmbeddings\n",
         "from langchain_community.document_loaders import PyPDFLoader\n",
         "from langchain_qdrant import Qdrant"
-      ],
-      "metadata": {
-        "id": "xnd9ZYqnc2MB"
-      },
-      "execution_count": 60,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "embedding_model = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
-        "semantic_chunker_embed_model = FastEmbedEmbeddings(model_name=\"BAAI/bge-base-en-v1.5\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7TbUEh-0Azxi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "embedding_model = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
+        "semantic_chunker_embed_model = FastEmbedEmbeddings(model_name=\"BAAI/bge-base-en-v1.5\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "V99hGlj2cnkA"
+      },
+      "outputs": [],
       "source": [
         "qdrant_client = QdrantClient(\n",
         "    \"https://8803fa99-7551-4f88-84c3-e134c9bed5de.us-east4-0.gcp.cloud.qdrant.io:6333\",\n",
@@ -108,15 +99,15 @@
         "\n",
         "QDRANT_URL = \"https://8803fa99-7551-4f88-84c3-e134c9bed5de.us-east4-0.gcp.cloud.qdrant.io:6333\"\n",
         "QDRANT_API_KEY = \"EFeN_UhdmAlDNYZHqJBUbZ88Nt7N0MkmvWLgM5Hs4ogNvExLMwNwdQ\""
-      ],
-      "metadata": {
-        "id": "V99hGlj2cnkA"
-      },
-      "execution_count": 45,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BAbk73KXdO-i"
+      },
+      "outputs": [],
       "source": [
         "def create_QDrant_collection():\n",
         "\t\tembeddings = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
@@ -126,15 +117,15 @@
         "\t)\n",
         "\n",
         "create_QDrant_collection()"
-      ],
-      "metadata": {
-        "id": "BAbk73KXdO-i"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "pj2OjJQ_fbnq"
+      },
+      "outputs": [],
       "source": [
         "def upload_chunks_to_QDrant(documents):\n",
         "  records_to_upload = []\n",
@@ -153,15 +144,15 @@
         "      collection_name=\"owners_manual\",\n",
         "      points=records_to_upload\n",
         "  )"
-      ],
-      "metadata": {
-        "id": "pj2OjJQ_fbnq"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "PucnNRleX7Kf"
+      },
+      "outputs": [],
       "source": [
         "def upload_pdf_to_QDrant(pdf_path):\n",
         "    semantic_chunker = SemanticChunker(\n",
@@ -180,26 +171,26 @@
         "        upload_chunks_to_QDrant(documents)\n",
         "\n",
         "    pdf_file.close()"
-      ],
-      "metadata": {
-        "id": "PucnNRleX7Kf"
-      },
-      "execution_count": 39,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "upload_pdf_to_QDrant(\"/content/text.pdf\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XPLFoiCHYTJo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "upload_pdf_to_QDrant(\"/content/text.pdf\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "id": "fDW1eZcYsuz1"
+      },
+      "outputs": [],
       "source": [
         "loader = PyPDFLoader(\"/content/text.pdf\")\n",
         "pages = loader.load_and_split()\n",
@@ -212,15 +203,15 @@
         "    api_key=QDRANT_API_KEY,\n",
         "    collection_name=\"owners_manual\",\n",
         ")"
-      ],
-      "metadata": {
-        "id": "fDW1eZcYsuz1"
-      },
-      "execution_count": 50,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {
+        "id": "syOqunU1N1fl"
+      },
+      "outputs": [],
       "source": [
         "template = \"\"\"Please answer the [question] using only the following [information]. If there is no [information] available to answer the question, do not force an answer.\n",
         "\n",
@@ -228,15 +219,15 @@
         "\n",
         "Question: {question}\n",
         "Final answer:\"\"\""
-      ],
-      "metadata": {
-        "id": "syOqunU1N1fl"
-      },
-      "execution_count": 57,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {
+        "id": "RMDsb0oNHf2D"
+      },
+      "outputs": [],
       "source": [
         "def reciprocal_rank_fusion(results: list[list], k=60):\n",
         "    \"\"\"Rerank docs (Reciprocal Rank Fusion)\n",
@@ -265,15 +256,15 @@
         "\n",
         "    # return only documents\n",
         "    return [x[0] for x in reranked_results[:MAX_DOCS_FOR_CONTEXT]]"
-      ],
-      "metadata": {
-        "id": "RMDsb0oNHf2D"
-      },
-      "execution_count": 56,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "EMDHKjwZITwC"
+      },
+      "outputs": [],
       "source": [
         "def query_generator(original_query: dict) -> list[str]:\n",
         "    \"\"\"Generate queries from original query\n",
@@ -310,15 +301,15 @@
         "    queries.insert(0, \"0. \" + query)\n",
         "\n",
         "    return queries"
-      ],
-      "metadata": {
-        "id": "EMDHKjwZITwC"
-      },
-      "execution_count": 55,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {
+        "id": "4LGJuyflIc6j"
+      },
+      "outputs": [],
       "source": [
         "def rrf_retriever(query: str) -> list[Document]:\n",
         "    \"\"\"RRF retriever\n",
@@ -354,15 +345,15 @@
         "    result = chain.invoke({\"query\": query})\n",
         "\n",
         "    return result"
-      ],
-      "metadata": {
-        "id": "4LGJuyflIc6j"
-      },
-      "execution_count": 54,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "id": "mgQTzKAnIw80"
+      },
+      "outputs": [],
       "source": [
         "def query(query: str, retriever: BaseRetriever):\n",
         "    \"\"\"\n",
@@ -397,20 +388,11 @@
         "    result = chain.invoke({\"question\": query})\n",
         "\n",
         "    return result"
-      ],
-      "metadata": {
-        "id": "mgQTzKAnIw80"
-      },
-      "execution_count": 53,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "retriever = RunnableLambda(rrf_retriever)\n",
-        "result = query(\"Explain Hyundai Warranty Policy\", retriever)\n",
-        "result['response']"
-      ],
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -419,22 +401,49 @@
         "id": "ZPgHLHD7VcZo",
         "outputId": "13cac3e8-ea3a-4190-be3f-1d4e4ca75731"
       },
-      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "' Hyundai provides a 3-year warranty from the date of sale, and the warranty is transferable to the subsequent owner for the remaining warranty period. The warranty policy offers comprehensive support to customers, including emergency roadside assistance, roadside repair, vehicle recovery, and jumping a dead battery. Customers are advised to visit a authorized Hyundai dealer workshop for assistance,  the full terms and conditions of which can be found online at the provided URL. \\n\\nIs there anything else you would like to know about Hyundai Warranty Policy? '"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "' Hyundai provides a 3-year warranty from the date of sale, and the warranty is transferable to the subsequent owner for the remaining warranty period. The warranty policy offers comprehensive support to customers, including emergency roadside assistance, roadside repair, vehicle recovery, and jumping a dead battery. Customers are advised to visit a authorized Hyundai dealer workshop for assistance,  the full terms and conditions of which can be found online at the provided URL. \\n\\nIs there anything else you would like to know about Hyundai Warranty Policy? '"
+            ]
           },
+          "execution_count": 61,
           "metadata": {},
-          "execution_count": 61
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "retriever = RunnableLambda(rrf_retriever)\n",
+        "result = query(\"Explain Hyundai Warranty Policy\", retriever)\n",
+        "result['response']"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
