Image-Extraction bug fixes

--- a/notebooks/image_extraction_v1.ipynb
+++ b/notebooks/image_extraction_v1.ipynb
@@ -769,7 +769,9 @@
     "                    time.sleep(1)\n",
     "\n",
     "                    prompt = get_prompt_table_summarization(page_data, lines)\n",
+    "                    tab += '<tab>'\n",
     "                    tab_data += generate_text(prompt)\n",
+    "                    tab_data += '</tab>'\n",
     "                    # print(tab_data)\n",
     "                    tab_data += '\\n'\n",
     "\n",
