Changes to Image Extraction in mongodb atlas

--- a/notebooks/image_extraction_v1.ipynb
+++ b/notebooks/image_extraction_v1.ipynb
@@ -664,22 +664,21 @@
     "    existing_document = collection.find_one({\"file_name\": file_name})\n",
     "\n",
     "    if existing_document:\n",
-    "        # Document with the same file_name already exists, return None or an appropriate message\n",
-    "        print(\"Document with this file_name already exists.\")\n",
-    "        print(existing_document)\n",
-    "        return None\n",
-    "    else:\n",
-    "        # Define the document to be inserted\n",
-    "        document = {\n",
-    "            \"encoded_val\": encoded_val,\n",
-    "            \"file_name\": file_name\n",
-    "        }\n",
+    "        # Document with the same file_name already exists, delete it\n",
+    "        collection.delete_one({\"file_name\": file_name})\n",
+    "        print(f\"Existing document with file_name {file_name} deleted.\")\n",
     "\n",
-    "        # Insert the document into the collection\n",
-    "        result = collection.insert_one(document)\n",
+    "    # Define the document to be inserted\n",
+    "    document = {\n",
+    "        \"encoded_val\": encoded_val,\n",
+    "        \"file_name\": file_name\n",
+    "    }\n",
     "\n",
-    "        # Return the inserted document's ID\n",
-    "        return result.inserted_id\n",
+    "    # Insert the document into the collection\n",
+    "    result = collection.insert_one(document)\n",
+    "\n",
+    "    # Return the inserted document's ID\n",
+    "    return result.inserted_id\n",
     "\n",
     "\n",
     "def get_file_details(file_name):\n",
