--- a/notebooks/image_extraction_tester_v2.ipynb
+++ b/notebooks/image_extraction_tester_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,13 +227,12 @@
     "        ranked_results: list of documents reranked by RRF\n",
     "    \"\"\"\n",
     "\n",
-    "    print(\"\\n\\n\\nresults in rrf function: \", len(results))\n",
+    "    # print(\"\\n\\n\\nresults in rrf function: \", len(results))\n",
     "\n",
     "    fused_scores = {}\n",
     "    for docs in results:\n",
     "        # Assumes the docs are returned in sorted order of relevance\n",
     "        for rank, doc in enumerate(docs):\n",
-    "            print(doc)\n",
     "            doc_str = dumps(doc)\n",
     "            if doc_str not in fused_scores:\n",
     "                fused_scores[doc_str] = 0\n",
@@ -282,8 +281,6 @@
     "    # add original query\n",
     "    queries.insert(0, \"0. \" + query)\n",
     "\n",
-    "    print(queries)\n",
-    "\n",
     "    return queries\n",
     "\n",
     "\n",
@@ -305,7 +302,6 @@
     "        prefer_grpc=True,\n",
     "        api_key=QDRANT_API_KEY,\n",
     "    )\n",
-    "    print(qdrant_client)\n",
     "\n",
     "    qdrant = Qdrant(\n",
     "        client=qdrant_client,\n",
@@ -328,7 +324,6 @@
     "\n",
     "    # invoke\n",
     "    result = chain.invoke({\"query\": query})\n",
-    "    print(result)\n",
     "\n",
     "    image_ids = []\n",
     "    from itertools import chain\n",
@@ -336,14 +331,12 @@
     "        image_ids.append(document.metadata['image_ids'])\n",
     "    image_ids = list(chain.from_iterable([item] if isinstance(item, str) else item for item in image_ids if item is not None))\n",
     "\n",
-    "    print(image_ids)\n",
-    "\n",
     "    return result, image_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +394,6 @@
     "from langchain_together.embeddings import TogetherEmbeddings\n",
     "\n",
     "def get_similarity_together(documents):\n",
-    "    os.environ[\"TOGETHER_API_KEY\"] = \"148521c4088ad416dced465cc144671626b00c860af4e6ebc855953567087d8a\"\n",
     "    embeddings = TogetherEmbeddings(model=\"togethercomputer/m2-bert-80M-8k-retrieval\")\n",
     "    embeds = embeddings.embed_documents(documents)\n",
     "    similarity_score = float(cos_sim(embeds[0], embeds[1]))\n",
@@ -411,8 +403,6 @@
     "\n",
     "def get_suitable_image(image_ids, query, query_emb, img_threshold=0.4):\n",
     "    text_to_image_ids = return_images_context(image_ids)\n",
-    "    for i in text_to_image_ids:\n",
-    "        print(text_to_image_ids[i])\n",
     "    # new_text_to_image_ids = dict()\n",
     "    images_context_values = list(text_to_image_ids.keys())\n",
     "\n",
@@ -463,7 +453,7 @@
     "    if max_image_context is None:\n",
     "        return None, None\n",
     "\n",
-    "    \n",
+    "    os.environ[\"TOGETHER_API_KEY\"] = \"148521c4088ad416dced465cc144671626b00c860af4e6ebc855953567087d8a\"\n",
     "    \n",
     "    # image_emb = co.embed(texts=[max_image_context],\n",
     "    #             model=model,\n",
@@ -494,59 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normal_retriever(query: str) -> list[Document]:\n",
-    "    \"\"\"RRF retriever\n",
-    "\n",
-    "    Args:\n",
-    "        query (str): Query string\n",
-    "\n",
-    "    Returns:\n",
-    "        list[Document]: retrieved documents\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Retriever\n",
-    "    embedding = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
-    "    \n",
-    "    qdrant_client = QdrantClient(\n",
-    "        QDRANT_URL,\n",
-    "        prefer_grpc=True,\n",
-    "        api_key=QDRANT_API_KEY,\n",
-    "    )\n",
-    "    print(qdrant_client)\n",
-    "\n",
-    "    qdrant = Qdrant(\n",
-    "        client=qdrant_client,\n",
-    "        collection_name=QDRANT_COLLECTION_NAME,\n",
-    "        embeddings=embedding,\n",
-    "    )\n",
-    "\n",
-    "    retriever = qdrant.as_retriever(\n",
-    "        search_kwargs={'k': TOP_K},\n",
-    "        metadata={}\n",
-    "    )\n",
-    "\n",
-    "    # invoke\n",
-    "    result = retriever.invoke(query)\n",
-    "    print(result)\n",
-    "\n",
-    "    image_ids = []\n",
-    "    from itertools import chain\n",
-    "    for document in result:\n",
-    "        image_ids.append(document.metadata['image_ids'])\n",
-    "    image_ids = list(chain.from_iterable([item] if isinstance(item, str) else item for item in image_ids if item is not None))\n",
-    "\n",
-    "    print(image_ids)\n",
-    "\n",
-    "    return result, image_ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,9 +495,7 @@
     "    # if cache_response is not None:\n",
     "    #     return cache_response, image_ids_from_cache\n",
     "    \n",
-    "    # context, image_ids = rrf_retriever(query)\n",
-    "    context, image_ids = normal_retriever(query)\n",
-    "    print(context)\n",
+    "    context, image_ids = rrf_retriever(query)\n",
     "    context_list = list()\n",
     "    image_ids = list(set(image_ids))\n",
     "\n",
@@ -575,25 +511,22 @@
     "                model=model,\n",
     "                input_type=input_type)\n",
     "    \n",
-    "    print(query_emb.embeddings)\n",
-    "    \n",
     "    chat_history = None\n",
     "    image_id, max_image_content = None, None\n",
     "    counter = None\n",
     "\n",
     "    # Use ThreadPoolExecutor to run functions in parallel\n",
     "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
-    "        # future_chat_history = executor.submit(get_latest_data, USER_ID, SESSION_ID)\n",
+    "        future_chat_history = executor.submit(get_latest_data, USER_ID, SESSION_ID)\n",
     "        future_image_id = executor.submit(get_suitable_image, image_ids, query, query_emb)\n",
     "        future_counter = executor.submit(check_probing_conditions, context_list, query_emb, threshold)\n",
     "        \n",
-    "        # chat_history = future_chat_history.result()\n",
+    "        chat_history = future_chat_history.result()\n",
     "        image_id, max_image_content = future_image_id.result()\n",
     "        counter = future_counter.result()\n",
     "\n",
     "    prompt = None\n",
     "    flag_probe = False\n",
-    "    chat_history = []\n",
     "\n",
     "    if (MAX_DOCS_FOR_CONTEXT - counter) <= 5:\n",
     "        prompt = f\"\"\"\n",
@@ -649,94 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
-    "# response, image_file_path = get_response(\"hyundai exter warranty\")\n",
+    "%%time\n",
+    "response, image_file_path = get_response(\"hyundai exter warranty\")\n",
     "\n",
-    "# if image_file_path:\n",
-    "#     plt_img_base64(get_file_details(image_file_path)['encoded_val'])\n",
-    "# else:\n",
-    "#     print(\"No image id detected\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<qdrant_client.qdrant_client.QdrantClient object at 0x000001CFB3AB10C0>\n",
-      "<langchain_community.vectorstores.qdrant.Qdrant object at 0x000001CFAFDFD360>\n",
-      "tags=['Qdrant', 'CohereEmbeddings'] metadata={} vectorstore=<langchain_community.vectorstores.qdrant.Qdrant object at 0x000001CFAFDFD360> search_kwargs={'k': 10}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Retriever\n",
-    "embedding = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
-    "\n",
-    "qdrant_client = QdrantClient(\n",
-    "    \"https://8803fa99-7551-4f88-84c3-e134c9bed5de.us-east4-0.gcp.cloud.qdrant.io:6333\",\n",
-    "    prefer_grpc=True,\n",
-    "    api_key=\"EFeN_UhdmAlDNYZHqJBUbZ88Nt7N0MkmvWLgM5Hs4ogNvExLMwNwdQ\",\n",
-    ")\n",
-    "print(qdrant_client)\n",
-    "\n",
-    "qdrant = Qdrant(\n",
-    "    client=qdrant_client,\n",
-    "    collection_name=\"manual\",\n",
-    "    embeddings=embedding,\n",
-    ")\n",
-    "print(qdrant)\n",
-    "retriever = qdrant.as_retriever(\n",
-    "    search_kwargs={'k': TOP_K},\n",
-    "    metadata={}\n",
-    ")\n",
-    "print(retriever)\n",
-    "\n",
-    "# invoke\n",
-    "result = retriever.invoke(\"Warranty hyundai exter\")\n",
-    "print(result)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# query_emb = co.embed(texts=[\"hi there\"],\n",
-    "#                 model=model,\n",
-    "#                 input_type=input_type)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# co = cohere.Client(COHERE_API_KEY)\n",
-    "# response = co.chat(\n",
-    "#     message=\"Tell me about ms dhoni\",\n",
-    "#     model=\"command-r\",\n",
-    "#     temperature=0\n",
-    "# )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response.text"
+    "if image_file_path:\n",
+    "    plt_img_base64(get_file_details(image_file_path)['encoded_val'])\n",
+    "else:\n",
+    "    print(\"No image id detected\")"
    ]
   },
   {
