organize, rename notebooks and add description

--- a/notebooks/image_embeddings.ipynb
+++ b/notebooks/image_embeddings.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Image Embeddings\n",
+        "\n",
+        "This notebook creates extracts all the images from owners manual and creates image embeddings \n",
+        "using clip model in roboflow, which are stored in a QDrant Collection. Metadata containg image_id will be stored aswell, which are used for image based search."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -35,14 +45,10 @@
         }
       ],
       "source": [
-        "import os\n",
-        "import faiss\n",
         "import torch\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from PIL import Image\n",
-        "from io import BytesIO\n",
-        "import IPython.display\n",
+        "import base64\n",
+        "import requests\n",
+        "\n",
         "from transformers import CLIPProcessor, CLIPModel, CLIPTokenizer\n",
         "from sentence_transformers.util import cos_sim"
       ]
@@ -102,7 +108,7 @@
       "source": [
         "from PIL import Image\n",
         "\n",
-        "def get_single_image_embedding(image_path):\n",
+        "def get_single_image_embedding_clip(image_path):\n",
         "    my_image = Image.open(image_path)\n",
         "\n",
         "    image = processor(\n",
@@ -121,38 +127,44 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "doiTCfhTMvjn"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "img = get_single_image_embedding(\"/content/Manual_Images/hyundai_exter/image_hyundai_exter_102_1.jpeg\")"
+        "def encode_image(image_path):\n",
+        "    ''' Getting the base64 string '''\n",
+        "    with open(image_path, \"rb\") as image_file:\n",
+        "        return base64.b64encode(image_file.read()).decode('utf-8')"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GUvcVLPmMy_F",
-        "outputId": "02216bc5-bbb9-4c80-aa48-768aaaac65ac"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "numpy.ndarray"
-            ]
-          },
-          "execution_count": 61,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "type(img)"
+        "def get_single_image_embedding_roboflow(image_path):\n",
+        "    encoded_val = encode_image(image_path)\n",
+        "    infer_clip_payload = {\n",
+        "        \"image\": {\n",
+        "            \"type\": \"base64\",\n",
+        "            \"value\": f\"{encoded_val}\",\n",
+        "        },\n",
+        "    }\n",
+        "\n",
+        "    base_url = \"https://infer.roboflow.com\"\n",
+        "    api_key = \"pUmnI6Vv3mdDdmDiEtqz\"\n",
+        "\n",
+        "    res = requests.post(\n",
+        "        f\"{base_url}/clip/embed_image?api_key={api_key}\",\n",
+        "        json=infer_clip_payload,\n",
+        "    )\n",
+        "\n",
+        "    embeddings = res.json()\n",
+        "\n",
+        "    if \"embeddings\" in embeddings:\n",
+        "        return embeddings['embeddings'][0]\n",
+        "    else:\n",
+        "        return None"
       ]
     },
     {
@@ -237,7 +249,6 @@
         "    for i, page in enumerate(doc):\n",
         "        print(f\"Page no is {i}\")\n",
         "\n",
-        "        img_data = ''\n",
         "        image_list = page.get_images(full=True)\n",
         "\n",
         "        if image_list:\n",
@@ -256,7 +267,7 @@
         "            img_path = f\"/content/Manual_Images/{source_file}/{image_id}\"\n",
         "            image.save(open(img_path, \"wb\"))\n",
         "\n",
-        "            image_embeddings = get_single_image_embedding(img_path)\n",
+        "            image_embeddings = get_single_image_embedding_roboflow(img_path)\n",
         "\n",
         "            chunk_metadata = {\n",
         "                \"image_id\": image_id,\n",
