--- a/notebooks/image_extraction_v2.ipynb
+++ b/notebooks/image_extraction_v2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Extraction\n",
+    "\n",
+    "When a query related to images are asked, the relavent image_ids are extracted from the image chunks stored in QDrant DB, which are given to Cohere LLM and prompted to extract the suitable image, given the image summary and the user query. If the retrieved image meets the threshold, it will be displayed to the user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
