--- a/notebooks/probing_questions.ipynb
+++ b/notebooks/probing_questions.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Probing Questions\n",
+        "\n",
+        "This Noteook generates proing questions, if the similarity score of k chunks is less than a fixed threshold."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
