--- a/notebooks/table_recreation.ipynb
+++ b/notebooks/table_recreation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table Re-Construction\n",
+    "\n",
+    "If the table chunks are retrieved from QDrant, it will be passed throught reconsturct_table_cohere function, which prompts the Cohere LLM to recreate the table data in json format, which will be displayed as tales to the users."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
