--- a/notebooks/SemanticChunking_and_RAGFusion.ipynb
+++ b/notebooks/SemanticChunking_and_RAGFusion.ipynb
@@ -1,21 +1,23 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Semantic Chunking and RAG Fusion\n",
+        "\n",
+        "- This Notebook does semantic chunking of csv files otained from notebooks/summarize_image.ipynb, it creates chunks in such a way that the related textual content will be present in the same chunk, which are inserted into QDrant a collecction \"owners_manual_chunks\". \n",
+        "\n",
+        "- RAG Fusion is a process where, multiple queries will be created similar to the users query with the help of a LLM. With the help of reciprocal rank fusion, the documents are ranked and provided to the chat completion LLM as context."
+      ]
+    },
+    {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "6Ui17RdZF-Jd"
+      },
+      "outputs": [],
       "source": [
         "%%capture\n",
         "!pip install langchain\n",
@@ -28,16 +30,18 @@
         "!pip install sentence_transformers\n",
         "!pip install langchain-cohere\n",
         "!pip install einops\n",
-        "!pip install PyPDF2"
-      ],
-      "metadata": {
-        "id": "6Ui17RdZF-Jd"
-      },
-      "execution_count": null,
-      "outputs": []
+        "!pip install PyPDF2\n",
+        "!pip install pypdf\n",
+        "!pip install -U langchain-qdrant"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "ZEelWy8VH1l3"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "os.environ[\"TOGETHER_API_KEY\"] = \"148521c4088ad416dced465cc144671626b00c860af4e6ebc855953567087d8a\"\n",
@@ -45,15 +49,15 @@
         "\n",
         "TOP_K = 5\n",
         "MAX_DOCS_FOR_CONTEXT = 5"
-      ],
-      "metadata": {
-        "id": "ZEelWy8VH1l3"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "xnd9ZYqnc2MB"
+      },
+      "outputs": [],
       "source": [
         "from operator import itemgetter\n",
         "from langchain.vectorstores import Qdrant\n",
@@ -72,77 +76,67 @@
         "from sentence_transformers.util import cos_sim\n",
         "import PyPDF2\n",
         "from langchain_experimental.text_splitter import SemanticChunker\n",
-        "from langchain_openai.embeddings import OpenAIEmbeddings"
-      ],
-      "metadata": {
-        "id": "xnd9ZYqnc2MB"
-      },
-      "execution_count": 16,
-      "outputs": []
+        "from langchain_openai.embeddings import OpenAIEmbeddings\n",
+        "from langchain.embeddings.cohere import CohereEmbeddings\n",
+        "from langchain_community.document_loaders import PyPDFLoader\n",
+        "from langchain_qdrant import Qdrant"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "embedding_model = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')\n",
-        "semantic_chunker_embed_model = FastEmbedEmbeddings(model_name=\"BAAI/bge-base-en-v1.5\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "7TbUEh-0Azxi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "embedding_model = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
+        "semantic_chunker_embed_model = FastEmbedEmbeddings(model_name=\"BAAI/bge-base-en-v1.5\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {
+        "id": "V99hGlj2cnkA"
+      },
+      "outputs": [],
       "source": [
         "qdrant_client = QdrantClient(\n",
         "    \"https://8803fa99-7551-4f88-84c3-e134c9bed5de.us-east4-0.gcp.cloud.qdrant.io:6333\",\n",
         "    prefer_grpc=True,\n",
         "    api_key=\"EFeN_UhdmAlDNYZHqJBUbZ88Nt7N0MkmvWLgM5Hs4ogNvExLMwNwdQ\",\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "V99hGlj2cnkA"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def create_QDrant_collection():\n",
-        "\t\tembedding_model = SentenceTransformer('sentence-transformers/all-mpnet-base-v2')\n",
-        "\t\tqdrant_client.recreate_collection(\n",
-        "\t\tcollection_name=\"owners_manual\",\n",
-        "\t\tvectors_config=models.VectorParams(\n",
-        "\t\t\tsize=embedding_model.get_sentence_embedding_dimension(),\n",
-        "\t\t\tdistance=models.Distance.COSINE\n",
-        "\t\t)\n",
-        "\t)\n",
+        ")\n",
         "\n",
-        "create_QDrant_collection()"
-      ],
-      "metadata": {
-        "id": "BAbk73KXdO-i",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "42a22176-3224-4640-c60a-a65ef99297d9"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-27-74b9a7dde14d>:3: DeprecationWarning: `recreate_collection` method is deprecated and will be removed in the future. Use `collection_exists` to check collection existence and `create_collection` instead.\n",
-            "  qdrant_client.recreate_collection(\n"
-          ]
-        }
+        "QDRANT_URL = \"https://8803fa99-7551-4f88-84c3-e134c9bed5de.us-east4-0.gcp.cloud.qdrant.io:6333\"\n",
+        "QDRANT_API_KEY = \"EFeN_UhdmAlDNYZHqJBUbZ88Nt7N0MkmvWLgM5Hs4ogNvExLMwNwdQ\""
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BAbk73KXdO-i"
+      },
+      "outputs": [],
+      "source": [
+        "def create_QDrant_collection():\n",
+        "\t\tembeddings = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
+        "\t\tqdrant_client.recreate_collection(\n",
+        "\t\tcollection_name=\"owners_manual\",\n",
+        "\t\tvectors_config = models.VectorParams(size=1024, distance=models.Distance.COSINE),\n",
+        "\t)\n",
+        "\n",
+        "create_QDrant_collection()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "pj2OjJQ_fbnq"
+      },
+      "outputs": [],
       "source": [
         "def upload_chunks_to_QDrant(documents):\n",
         "  records_to_upload = []\n",
@@ -161,15 +155,15 @@
         "      collection_name=\"owners_manual\",\n",
         "      points=records_to_upload\n",
         "  )"
-      ],
-      "metadata": {
-        "id": "pj2OjJQ_fbnq"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "id": "PucnNRleX7Kf"
+      },
+      "outputs": [],
       "source": [
         "def upload_pdf_to_QDrant(pdf_path):\n",
         "    semantic_chunker = SemanticChunker(\n",
@@ -181,35 +175,54 @@
         "    pdf_reader = PyPDF2.PdfReader(pdf_file)\n",
         "\n",
         "    text = ''\n",
-        "    documents = []\n",
         "    for page_num in range(len(pdf_reader.pages)):\n",
         "        page = pdf_reader.pages[page_num]\n",
         "        text = page.extract_text()\n",
-        "        chunks = semantic_chunker.create_documents([text])\n",
-        "        documents.append(chunks)\n",
+        "        documents = semantic_chunker.create_documents([text])\n",
+        "        upload_chunks_to_QDrant(documents)\n",
         "\n",
-        "    upload_chunks_to_QDrant(documents)\n",
         "    pdf_file.close()"
-      ],
-      "metadata": {
-        "id": "PucnNRleX7Kf"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "upload_pdf_to_QDrant(\"/content/text.pdf\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XPLFoiCHYTJo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "upload_pdf_to_QDrant(\"/content/text.pdf\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "id": "fDW1eZcYsuz1"
+      },
+      "outputs": [],
+      "source": [
+        "loader = PyPDFLoader(\"/content/text.pdf\")\n",
+        "pages = loader.load_and_split()\n",
+        "\n",
+        "qdrant = Qdrant.from_documents(\n",
+        "    pages,\n",
+        "    embedding_model,\n",
+        "    url=QDRANT_URL,\n",
+        "    prefer_grpc=True,\n",
+        "    api_key=QDRANT_API_KEY,\n",
+        "    collection_name=\"owners_manual\",\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {
+        "id": "syOqunU1N1fl"
+      },
+      "outputs": [],
       "source": [
         "template = \"\"\"Please answer the [question] using only the following [information]. If there is no [information] available to answer the question, do not force an answer.\n",
         "\n",
@@ -217,15 +230,15 @@
         "\n",
         "Question: {question}\n",
         "Final answer:\"\"\""
-      ],
-      "metadata": {
-        "id": "syOqunU1N1fl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {
+        "id": "RMDsb0oNHf2D"
+      },
+      "outputs": [],
       "source": [
         "def reciprocal_rank_fusion(results: list[list], k=60):\n",
         "    \"\"\"Rerank docs (Reciprocal Rank Fusion)\n",
@@ -254,15 +267,15 @@
         "\n",
         "    # return only documents\n",
         "    return [x[0] for x in reranked_results[:MAX_DOCS_FOR_CONTEXT]]"
-      ],
-      "metadata": {
-        "id": "RMDsb0oNHf2D"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "EMDHKjwZITwC"
+      },
+      "outputs": [],
       "source": [
         "def query_generator(original_query: dict) -> list[str]:\n",
         "    \"\"\"Generate queries from original query\n",
@@ -299,15 +312,15 @@
         "    queries.insert(0, \"0. \" + query)\n",
         "\n",
         "    return queries"
-      ],
-      "metadata": {
-        "id": "EMDHKjwZITwC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {
+        "id": "4LGJuyflIc6j"
+      },
+      "outputs": [],
       "source": [
         "def rrf_retriever(query: str) -> list[Document]:\n",
         "    \"\"\"RRF retriever\n",
@@ -320,7 +333,8 @@
         "    \"\"\"\n",
         "\n",
         "    # Retriever\n",
-        "    embedding = SentenceTransformerEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")\n",
+        "    embedding = CohereEmbeddings(model = \"embed-english-v3.0\")\n",
+        "\n",
         "\n",
         "    qdrant = Qdrant(\n",
         "        client=qdrant_client,\n",
@@ -342,15 +356,15 @@
         "    result = chain.invoke({\"query\": query})\n",
         "\n",
         "    return result"
-      ],
-      "metadata": {
-        "id": "4LGJuyflIc6j"
-      },
-      "execution_count": 28,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "id": "mgQTzKAnIw80"
+      },
+      "outputs": [],
       "source": [
         "def query(query: str, retriever: BaseRetriever):\n",
         "    \"\"\"\n",
@@ -385,25 +399,62 @@
         "    result = chain.invoke({\"question\": query})\n",
         "\n",
         "    return result"
-      ],
-      "metadata": {
-        "id": "mgQTzKAnIw80"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 107
+        },
+        "id": "ZPgHLHD7VcZo",
+        "outputId": "13cac3e8-ea3a-4190-be3f-1d4e4ca75731"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "' Hyundai provides a 3-year warranty from the date of sale, and the warranty is transferable to the subsequent owner for the remaining warranty period. The warranty policy offers comprehensive support to customers, including emergency roadside assistance, roadside repair, vehicle recovery, and jumping a dead battery. Customers are advised to visit a authorized Hyundai dealer workshop for assistance,  the full terms and conditions of which can be found online at the provided URL. \\n\\nIs there anything else you would like to know about Hyundai Warranty Policy? '"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "retriever = RunnableLambda(rrf_retriever)\n",
-        "result = query(\"Enter Query Here\", retriever)\n",
+        "result = query(\"Explain Hyundai Warranty Policy\", retriever)\n",
         "result['response']"
-      ],
-      "metadata": {
-        "id": "ZPgHLHD7VcZo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.11"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
