--- a/notebooks/store_images_mongodb.ipynb
+++ b/notebooks/store_images_mongodb.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing encoded images in MongoDB\n",
+    "\n",
+    "This Notebook has functions for storing and retrieving encoded images from MongoDB."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
