--- a/notebooks/summarize_images_v2.ipynb
+++ b/notebooks/summarize_images_v2.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image Summary\n",
+    "\n",
+    "This Notebook prompts Gemini to generate summaries for the extracted images, which are stored in image chunks in QDrant DB."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
